fix light/dark mode btn styles

--- a/src/components/css/header.css
+++ b/src/components/css/header.css
@@ -22,12 +22,15 @@
     top: 50%;
     transform: translateY(-50%);
     right: 20px;
-    width: 25px;
-    height: 25px;
-    background-image: url(../../images/icons/light-switch.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: transparent;
+    width: 40px;
+    height: 40px;
+    padding: 15px;
     border: 0;
+    border-radius: 100%;
+    background-color: var(--tertiary);
+  }
+
+  .dark-fill svg {
+    fill: #000;
   }
 }
